--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button data-skip="25" class="player__button">25s »</button>
     </div>
 </div>
-<script src="lib/jquery.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
